policies/templates/allowedserviceportname.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  annotations:
    description: Requires that service port names have a prefix from a specified list.
    metadata.gatekeeper.sh/title: Allowed Service Port Names
    metadata.gatekeeper.sh/version: 1.0.1
  labels:
  name: allowedserviceportname
spec:
  crd:
    spec:
      names:
        kind: AllowedServicePortName
      validation:
        legacySchema: false
        openAPIV3Schema:
          properties:
            prefixes:
              description: Prefixes of allowed service port names.
              items:
                type: string
              type: array
          type: object
  targets:
  - rego: |
      package asm.guardrails.allowedserviceportname

      violation[{"msg": msg}] {
        service := input.review.object
        port := service.spec.ports[_]
        prefixes := input.parameters.prefixes

        not is_prefixed(port, prefixes)

        msg := "service port name missing prefix"
      }

      is_prefixed(port, prefixes) {
        prefix := prefixes[_]
        startswith(port.name, prefix)
      }
    target: admission.k8s.gatekeeper.sh
